Fix for disproportionated images
Images are stretched or squashed due to the 80% rule, I think you don't need it for the layout and will let the imgs get their appropiated dims

--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -39,7 +39,6 @@
     }
   }
   &__img {
-    width: 80%;
     height: 30rem;
     justify-self: center;
   }
